manifests/applications/alexbissessur/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alexbissessur
  name: alexbissessur
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: alexbissessur
status:
  loadBalancer: {}
