manifests/applications/alexbissessur/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alexbissessur
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - alexbissessur.dev
    secretName: alexbissessur-tls
  rules:
  - host: alexbissessur.dev
    http:
      paths:

      # anubis bypass for rss
      - path: /rss
        pathType: Prefix
        backend:
          service:
            name: ghost-svc
            port:
              number: 80

      # mastodon stuff
      - path: /.well-known/webfinger
        pathType: Prefix
        backend:
          service:
            name: mastodon
            port:
              number: 8080
      - path: /.well-known/host-meta
        pathType: Prefix
        backend:
          service:
            name: mastodon
            port:
              number: 8080
      - path: /.well-known/nodeinfo
        pathType: Prefix
        backend:
          service:
            name: mastodon
            port:
              number: 8080

      # anubis, and subsequently website
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anubis
            port:
              number: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: mastodon
spec:
  type: ExternalName
  externalName: mastodon.mastodon.svc.cluster.local
  ports:
  - port: 8080
